--- a/roles/kolla_bootstrap/tasks/main.yml
+++ b/roles/kolla_bootstrap/tasks/main.yml
@@ -1,8 +1,2 @@
-- name: main.yml | Include create.yml
-  include: create.yml
-  when: clean | bool == False
-
-- name: main.yml | Include clean.yml
-  include: destroy.yml
-  when: clean | bool == True
-  ignore_errors: True
+---
+- include: "{{ action }}.yml"
