--- a/roles/kolla_hosts/defaults/main.yml
+++ b/roles/kolla_hosts/defaults/main.yml
@@ -7,17 +7,18 @@ home_dir: "{{ ansible_env.HOME }}"
 tmp_dir: "/tmp"
 libvirt_dir: "/var/lib/libvirt/images"
 host_interfaces:
-  - name: ens33
-    role: nat
+  - role: nat
+    cidr: 192.168.122.0/24
     bridge: virbr0
-  - name: ens34
-    role: host
+    name: ens3
+  - role: host
     cidr: 192.168.133.0/24
     bridge: virbr1
-  - name: ens35
-    role: ext
-    cidr: 192.168.150.0/24
+    name: ens4
+  - role: ext
+    cidr: 192.168.144.0/24
     bridge: virbr3
+    name: ens5
 docker_registry_name: registry
 yum_dependencies:
   - docker
@@ -28,6 +29,7 @@ yum_dependencies:
 pip_dependencies:
   - docker-py
   - libvirt-python
+  - lxml
 
 ##########################
 # Kolla OS image variables
