--- a/roles/kolla_build/tasks/opnfv-quagga-build.yml
+++ b/roles/kolla_build/tasks/opnfv-quagga-build.yml
@@ -7,3 +7,8 @@
   copy:
     src: "templates/quagga-Dockerfile.j2"
     dest: "{{ work_dir }}/kolla/docker/opnfv-quagga/Dockerfile.j2"
+
+- name: add opnfv to sources
+  lineinfile:
+    path: "{{ work_dir }}/kolla/kolla.egg-info/SOURCES.txt"
+    line: "docker/opnfv-quagga/Dockerfile.j2"
