--- a/roles/kolla_deploy/defaults/main.yml
+++ b/roles/kolla_deploy/defaults/main.yml
@@ -1,5 +1,10 @@
 ---
-clean: False
+
+################''
+# Kolla ODL dev #
+#################
+
+kolla_odl_git_refs: refs/changes/67/416367/80
 
 ###############
 # Kolla nodes #
