--- a/roles/kolla_hosts/tasks/destroy.yml
+++ b/roles/kolla_hosts/tasks/destroy.yml
@@ -8,6 +8,7 @@
     name: "{{ docker_registry_name }}"
     image: registry:2
     state: absent
+  ignore_errors: True
 
 - name: Destroy VMs
   become: True
