--- a/roles/kolla_build/tasks/opnfv-quagga-build.yml
+++ b/roles/kolla_build/tasks/opnfv-quagga-build.yml
@@ -1,9 +1,9 @@
-- name: Create template directory
+- name: opnfv-quagga | Create template directory
   file:
     path: "{{ work_dir }}/kolla/docker/opnfv-quagga"
     state: directory
 
-- name: Create Dockerfile
+- name: opnfv-quagga | Create Dockerfile
   copy:
     src: "templates/quagga-Dockerfile.j2"
     dest: "{{ work_dir }}/kolla/docker/opnfv-quagga/Dockerfile.j2"
