--- a/roles/kolla_hosts/defaults/main.yml
+++ b/roles/kolla_hosts/defaults/main.yml
@@ -6,25 +6,27 @@
 home_dir: "{{ ansible_env.HOME }}"
 tmp_dir: "/tmp"
 libvirt_dir: "/var/lib/libvirt/images"
+host_qemu_path: "/usr/libexec/qemu-kvm"
 host_interfaces:
-  - name: nat
+  - name: nat-bridge
     role: nat
     cidr: 192.168.122.0/24
     bridge: virbr0
-    name: ens3
-  - name: host
+    vnic: ens3
+  - name: host-bridge
     role: host
     cidr: 192.168.133.0/24
     bridge: virbr1
-    name: ens4
-  - name: ext
+    vnic: ens4
+  - name: ext-bridge
     role: ext
     cidr: 192.168.144.0/24
     bridge: virbr3
-    name: ens5
+    vnic: ens5
 docker_registry_name: registry
 yum_dependencies:
   - docker-ce
+  - libvirt
   - libvirt-devel
   - bridge-utils
   - genisoimage
