--- a/debug.yml
+++ b/debug.yml
@@ -5,11 +5,9 @@
 
 
   tasks:
-    - name: stat a file
-      stat:
-        path: /etc/hosts
-      register: file_a_stat
+    - virt_net: command=status name=default
+      register: myvar
 
     - name: debug all variables
       debug:
-        var: hostvars
+        var: myvar
