--- a/roles/kolla_bootstrap/tasks/create.yml
+++ b/roles/kolla_bootstrap/tasks/create.yml
@@ -56,6 +56,9 @@
     state: restarted
     enabled: yes
 
+- name: Install docker python library
+  pip: name=docker state=latest
+
 - name: Start NTP
   systemd:
     name: ntpd
