--- a/roles/kolla_build/tasks/create.yml
+++ b/roles/kolla_build/tasks/create.yml
@@ -4,6 +4,7 @@
   git:
     repo: https://github.com/openstack/kolla
     dest: "{{ tmp_dir }}/kolla"
+    force: yes
 
 - include: opnfv-quagga-build.yml work_dir="{{ tmp_dir }}"
 
@@ -37,5 +38,5 @@
   with_items: "{{ build_overrides }}"
 
 - name: build all containers
-  command: "kolla-build -n kolla --push --profile odl"
+  command: "kolla-build -n kolla --push --profile odl --retries 10"
   changed_when: False
