--- a/roles/kolla_deploy/defaults/main.yml
+++ b/roles/kolla_deploy/defaults/main.yml
@@ -37,7 +37,7 @@ globals_override:
   enable_odl_legacy_netvirt_conntrack: "no"
   kolla_internal_vip_address: 192.168.133.254
   docker_namespace: "kolla"
-  opendaylight_port_binding_type: "network-topology"
+  opendaylight_port_binding_type: "pseudo-agentdb-binding"
   opendaylight_features: "odl-mdsal-apidocs,odl-netvirt-openstack"
   opendaylight_leader_ip_address: "192.168.133.100"
   opendaylight_restconf_port: "8087"
@@ -56,3 +56,16 @@ tmp_dir: "/tmp"
 kolla_node_internal_intf: ens4
 kolla_node_external_intf: ens5
 kolla_node_home_dir: "{{ ansible_env.HOME }}"
+
+######################
+# OPNFV Quagga Role  #
+######################
+quagga_files:
+  - name: defaults
+    files: [main.yml]
+  - name: handlers
+    files: [main.yml]
+  - name: tasks
+    files: [main.yml, deploy.yml, config.yml, pull.yml, precheck.yml]
+  - name: templates
+    files: [quagga.json.j2, quagga.conf.j2]
