--- a/roles/kolla_build/defaults/main.yml
+++ b/roles/kolla_build/defaults/main.yml
@@ -36,4 +36,4 @@ build_overrides:
     value: source
   - section: profiles
     option: odl
-    value: opendaylight,opnfv-quagga,chrony,cron,kolla-toolbox,fluentd,glance,haproxy,heat,horizon,keepalived,keystone,mariadb,memcached,neutron,nova,openvswitch,rabbitmq
+    value: opendaylight,thrift-quagga,chrony,cron,kolla-toolbox,fluentd,glance,haproxy,heat,horizon,keepalived,keystone,mariadb,memcached,neutron,nova,openvswitch,rabbitmq
