--- a/roles/kolla_deploy/defaults/main.yml
+++ b/roles/kolla_deploy/defaults/main.yml
@@ -1,11 +1,5 @@
 ---
 
-################''
-# Kolla ODL dev #
-#################
-
-kolla_odl_git_refs: refs/changes/67/416367/80
-
 ###############
 # Kolla nodes #
 ###############
@@ -30,17 +24,6 @@ globals_override:
   neutron_external_interface: "{{ kolla_node_external_intf }}"
   kolla_install_type: "source"
   docker_registry: "{{ docker_registry_ip }}:{{ docker_registry_port }}"
-  neutron_plugin_agent: "opendaylight"
-  opendaylight_mechanism_driver: "opendaylight_v2"
-  enable_opendaylight_l3: "yes"
-  enable_opendaylight_qos: "no"
-  enable_odl_legacy_netvirt_conntrack: "no"
-  kolla_internal_vip_address: 192.168.133.254
-  docker_namespace: "kolla"
-  opendaylight_port_binding_type: "pseudo-agentdb-binding"
-  opendaylight_features: "odl-mdsal-apidocs,odl-netvirt-openstack"
-  opendaylight_leader_ip_address: "192.168.133.100"
-  opendaylight_restconf_port: "8087"
   enable_opendaylight: "yes"
 
 ############################
@@ -57,9 +40,9 @@ kolla_node_internal_intf: ens4
 kolla_node_external_intf: ens5
 kolla_node_home_dir: "{{ ansible_env.HOME }}"
 
-######################
-# OPNFV Quagga Role  #
-######################
+################
+# Quagga Role  #
+################
 quagga_files:
   - name: defaults
     files: [main.yml]
@@ -68,4 +51,4 @@ quagga_files:
   - name: tasks
     files: [main.yml, deploy.yml, config.yml, pull.yml, precheck.yml]
   - name: templates
-    files: [quagga.json.j2, qthriftd.conf.j2]
+    files: [quagga.json.j2]
