--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,4 @@ hostfile = ./hosts
 host_key_checking = False
 retry_files_save_path = retry-files
 log_path = ./ansible.log
+callback_plugins = callback_plugin/
