--- a/roles/kolla_deploy/defaults/main.yml
+++ b/roles/kolla_deploy/defaults/main.yml
@@ -24,6 +24,8 @@ globals_override:
   neutron_external_interface: "{{ kolla_node_external_intf }}"
   kolla_install_type: "source"
   docker_registry: "{{ docker_registry_ip }}:{{ docker_registry_port }}"
+  docker_namespace: "kolla"
+  kolla_internal_vip_address: 192.168.133.254
   enable_opendaylight: "yes"
 
 ############################
