--- a/roles/kolla_build/defaults/main.yml
+++ b/roles/kolla_build/defaults/main.yml
@@ -34,6 +34,12 @@ build_overrides:
   - section: DEFAULT
     option: install_type
     value: source
+  - section: opendaylight
+    option: type
+    value: url
+  - section: opendaylight
+    option: location
+    value: https://nexus.opendaylight.org/content/repositories/opendaylight.release/org/opendaylight/integration/distribution-karaf/0.5.4-Boron-SR4/distribution-karaf-0.5.4-Boron-SR4.tar.gz
   - section: profiles
     option: odl
     value: opendaylight,thrift-quagga,chrony,cron,kolla-toolbox,fluentd,glance,haproxy,heat,horizon,keepalived,keystone,mariadb,memcached,neutron,nova,openvswitch,rabbitmq
