--- a/roles/kolla_build/defaults/main.yml
+++ b/roles/kolla_build/defaults/main.yml
@@ -39,7 +39,7 @@ build_overrides:
     value: url
   - section: opendaylight
     option: location
-    value: https://nexus.opendaylight.org/content/repositories/opendaylight.release/org/opendaylight/integration/distribution-karaf/0.5.4-Boron-SR4/distribution-karaf-0.5.4-Boron-SR4.tar.gz
+    value: https://nexus.opendaylight.org/content/repositories/opendaylight.release/org/opendaylight/integration/distribution-karaf/0.6.1-Carbon/distribution-karaf-0.6.1-Carbon.tar.gz
   - section: profiles
     option: odl
     value: opendaylight,thrift-quagga,chrony,cron,kolla-toolbox,fluentd,glance,haproxy,heat,horizon,keepalived,keystone,mariadb,memcached,neutron,nova,openvswitch,rabbitmq
