--- a/roles/kolla_deploy/defaults/main.yml
+++ b/roles/kolla_deploy/defaults/main.yml
@@ -27,6 +27,7 @@ globals_override:
   docker_namespace: "kolla"
   kolla_internal_vip_address: 192.168.133.254
   enable_opendaylight: "yes"
+  neutron_plugin_agent: "opendaylight"
 
 ############################
 # Docker registry defaults #
