--- a/roles/kolla_deploy/defaults/main.yml
+++ b/roles/kolla_deploy/defaults/main.yml
@@ -15,6 +15,7 @@ kolla_vm_names:
 #############################
 password_overrides:
   keystone_admin_password: admin
+  opendaylight: admin
 
 ###############################
 # Kolla globals.yml overrides #
