another successful run

--- a/roles/kolla_deploy/defaults/main.yml
+++ b/roles/kolla_deploy/defaults/main.yml
@@ -15,7 +15,7 @@ kolla_vm_names:
 #############################
 password_overrides:
   keystone_admin_password: admin
-  opendaylight: admin
+  opendaylight_password: admin
 
 ###############################
 # Kolla globals.yml overrides #
