--- a/roles/kolla_deploy/defaults/main.yml
+++ b/roles/kolla_deploy/defaults/main.yml
@@ -1,5 +1,13 @@
 ---
 
+######################
+# Features to enable #
+######################
+
+enable_opendaylight: "yes"
+enable_skydive: "yes"
+enable_tacker: "yes"
+
 ###############
 # Kolla nodes #
 ###############
@@ -27,8 +35,17 @@ globals_override:
   docker_registry: "{{ docker_registry_ip }}:{{ docker_registry_port }}"
   docker_namespace: "kolla"
   kolla_internal_vip_address: 192.168.133.254
-  enable_opendaylight: "yes"
-  neutron_plugin_agent: "opendaylight"
+# Opendaylight settings
+  enable_opendaylight: "{{ enable_opendaylight | bool }}"
+  neutron_plugin_agent: "{{ enable_opendaylight | bool }}"
+# Skydive settings
+  enable_skydive: "{{ enable_skydive | bool }}"
+  enable_elasticsearch: "{{ enable_skydive | bool }}"
+# Tacker settings
+  enable_tacker: "{{ enable_tacker | bool }}"
+  enable_barbican: "{{ enable_tacker | bool }}"
+  enable_mistral: "{{ enable_tacker | bool }}"
+  enable_redis: "{{ enable_tacker | bool }}"
 
 ############################
 # Docker registry defaults #
