only install quagga when ODL is enabled

--- a/roles/kolla_deploy/tasks/create.yml
+++ b/roles/kolla_deploy/tasks/create.yml
@@ -112,6 +112,7 @@
         hosts: quagga
         roles:
           - { role: thrift-quagga,
+              when: enable_opendaylight | bool,
               tags: thrift-quagga }
   when: quagga_files is defined
 
